--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,30 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19 ? true : false;
+    });
+    console.log({isAdult});
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19 ? true : false;
+    });
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const foundID = comments.find(comment => comment.id === 823423);
+    console.log(foundID);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const index = comments.findIndex(comment => comment.id === 823423);
     // delete the comment with the ID of 823423
+    comments.splice(index, 1); // or const newComments = [...comments.slice(0, index), ...comments.slice(index + 1)];
+    console.table(comments);
 
   </script>
 </body>
